Optimise the water gel spearing algorithm so that it doesn't take a minute with large bodies of water.